[project]
name = "plex-usher-mcp"
version = "0.1.0"
description = "Plex Read-only MCP server. Search libraries, pull metadata, save movie posters"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.2.0",
    "rapidfuzz>=3.6.0",
]

[project.scripts]
plex-usher-mcp = "plex_usher.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plex_usher"]

[tool.ruff]
line-length = 100
target-version = "py311"
